<resources>
    <string name="app_name">Cadastro</string>
    <string name="email">Email</string>
    <string name="required">Required</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="checkboxQuestion">Ingressar na lista de email?</string>
    <string name="sexo">Sexo</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>

    <string-array name="states">
        <item>Acre</item>
        <item>Alagoas</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceará</item>
        <item>Distrito Federal</item>
        <item>Espírito Santo</item>
        <item>Goiás</item>
        <item>Maranhão</item>
        <item>Mato Grosso</item>
        <item>Mato Grosso do Sul</item>
        <item>Minas Gerais</item>
        <item>Pará</item>
        <item>Paraíba</item>
        <item>Paraná</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte</item>
        <item>Rio Grande do Sul</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Sergipe</item>
        <item>Tocantins</item>
    </string-array>
</resources>